update preprocess step and add backtransform step

--- a/preprocess_data.ipynb
+++ b/preprocess_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,18 +24,19 @@
     "        \n",
     "    base_fname = f'{d_basepath}/{ds}/{ds}'\n",
     "    source_fname = f'{base_fname}{suffix}.{ext}'\n",
+    "    fname = os.path.basename(os.path.splitext(source_fname)[0])\n",
     "    print(f'Basepath: {base_fname}')\n",
     "    print(f'Source file: {source_fname}')\n",
-    "    fname = os.path.basename(os.path.splitext(source_fname)[0])\n",
     "    \n",
     "    df = pd.read_csv(source_fname, sep=sep)\n",
     "    df = df.drop(drop, axis=1)\n",
     "    df_num, subs = cat_to_num(df, cat_names=cat_names)\n",
-    "    pickle.dump(subs, open(f'{d_basepath}/{ds}/subs.pkl', 'wb'))\n",
+    "    pickle.dump(subs, open(f'../data/{ds}/subs.pkl', 'wb'))\n",
     "\n",
     "    if target:\n",
     "        y = df_num[target]\n",
     "        df_num = df_num.drop([target], axis=1)\n",
+    "        print(f'y_dim: {len(y.unique())}')\n",
     "        \n",
     "    if to_disk:\n",
     "        if target:\n",
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -80,6 +81,7 @@
      "text": [
       "Basepath: data/Ticket/Ticket\n",
       "Source file: data/Ticket/Ticket_textual.csv\n",
+      "y_dim: 15\n",
       "Target file label: data/Ticket/Ticket_labels.csv\n",
       "Target file: data/Ticket/Ticket.csv\n"
      ]
@@ -286,7 +288,7 @@
        "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
